--- a/ui/cart.html
+++ b/ui/cart.html
@@ -8,6 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/plants.css">
+    <style>
+        /* Sticky footer styling */
+        body, html {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+        main {
+            flex: 1;
+            padding-bottom: 1rem;
+        }
+    </style>
 </head>
 
 <body>
@@ -28,7 +40,7 @@
         </div>
     </main>
 
-    <footer class="bg-light text-center py-3 mt-5">
+    <footer class="bg-light text-center py-3">
         <p>&copy; 2024 Plants Store. All rights reserved.</p>
     </footer>
 
