--- a/ui/register.html
+++ b/ui/register.html
@@ -8,6 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/plants.css">
+    <style>
+        /* Ensure the footer sticks to the bottom */
+        html, body {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
+        .container {
+            flex: 1; /* Expands to fill available space */
+        }
+    </style>
 </head>
 
 <body>
@@ -51,7 +63,7 @@
         </div>
     </div>
 
-    <footer class="bg-light text-center py-3 mt-5">
+    <footer class="bg-light text-center py-3">
         <p>&copy; 2024 Plants Store. All rights reserved.</p>
     </footer>
 
