--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,18 @@
     <link rel="stylesheet" href="css/plants.css">
     <link rel="stylesheet" href="css/video.css">
     <link rel="icon" href="./css/logo.png">
+    <style>
+        /* Ensure the footer sticks to the bottom */
+        html, body {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
+        .container {
+            flex: 1; /* Expands to fill available space */
+        }
+    </style>
 </head>
 
 <body>
@@ -105,7 +117,7 @@
         </div>
     </div>
 
-    <footer class="bg-light text-center py-3 mt-5">
+    <footer class="bg-light text-center py-3">
         <p>&copy; 2024 Plants Store. All rights reserved.</p>
     </footer>
 
