--- a/ui/adminPanel.html
+++ b/ui/adminPanel.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/adminPanel.css">
     <link rel="stylesheet" href="css/video.css">
+    <link rel="icon" href="./css/logo.png">
 
 
 </head>
@@ -49,12 +50,9 @@
                         <option value="true">Yes</option>
                         <option value="false">No</option>
                     </select>
-                    <input type="number" id="search-minCredit" placeholder="Min Credit">
-                    <input type="number" id="search-maxCredit" placeholder="Max Credit">
                     <select id="search-sort">
                         <option value="">Sort By</option>
                         <option value="username_asc">Username</option>
-                        <option value="credit_asc">Credit</option>
                     </select>
                     <input type="number" id="search-page" placeholder="Page">
                     <input type="number" id="search-limit" placeholder="Limit">
