--- a/ui/login.html
+++ b/ui/login.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/plants.css">
+    <link rel="icon" href="./css/logo.png">
+
     <style>
         /* Full-height layout and sticky footer styling */
         html, body {
