--- a/ui/register.html
+++ b/ui/register.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/plants.css">
+    <link rel="icon" href="./css/logo.png">
+
     <style>
         /* Ensure the footer sticks to the bottom */
         html, body {
