--- a/ui/seller.html
+++ b/ui/seller.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/plants.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
+    <link rel="icon" href="./css/logo.png">
+
 </head>
 <body>
 <header id="header" class="bg-light p-3 shadow-sm">
@@ -25,7 +27,6 @@
         <tr>
             <th>Name</th>
             <th>Price</th>
-            <th>Stock</th>
             <th>Actions</th>
         </tr>
         </thead>
