--- a/ui/seller.html
+++ b/ui/seller.html
@@ -23,19 +23,19 @@
     <section>
         <div class="card p-3 mb-4">
             <h3 class="mb-3">Manage Products</h3>
-            <table id="productTable" class="table table-striped">
+            <table id="productTable" class="table">
                 <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Price</th>
-                    <th>Actions</th>
-                </tr>
+                    <tr>
+                        <th>Name</th>
+                        <th>Price</th>
+                        <th>Actions</th>
+                    </tr>
                 </thead>
-                <tbody></tbody>
+                <tbody>
+                </tbody>
             </table>
         </div>
     </section>
-
     <!-- Create Plant Modal -->
     <div id="create-plant-modal" class="modal">
         <div class="modal-content">
